force-app/main/default/objects/Line_Item_Fee__c/Line_Item_Fee__c.object-meta.xml
<CustomObject>
    <label>Line Item Fee</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Line Item Fee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>