force-app/main/default/objects/Line_Item_Fee__c/fields/Adjustment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Cost__c</fullName>
    <label>Adjustment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>