force-app/main/default/objects/Line_Item_Fee__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <formula>Line_Item__r.Contract__c</formula>
    <label>Contract</label>
    <type>Text</type>
</CustomField>