force-app/main/default/objects/Line_Item_Fee__c/fields/Contract_Pending_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pending_Amendment__c</fullName>
    <formula>NOT(ISBlANK(TEXT( Line_Item__r.Contract__r.Amendment_Status__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Pending Amendment</label>
    <type>Checkbox</type>
</CustomField>