force-app/main/default/objects/Line_Item_Fee__c/fields/Contract_Pending_TC_Revision__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pending_TC_Revision__c</fullName>
    <formula>Line_Item__r.Contract_Pending_TC_Revision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Pending TC Revision</label>
    <type>Checkbox</type>
</CustomField>