force-app/main/default/objects/Line_Item_Fee__c/fields/ContractInPlay__c.field-meta.xml
<CustomField>
    <fullName>ContractInPlay__c</fullName>
    <formula>ISPICKVAL(Line_Item__r.Contract__r.Contract_Status__c, &quot;Activated&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContractInPlay</label>
    <type>Checkbox</type>
</CustomField>