force-app/main/default/objects/Line_Item_Fee__c/fields/ContractIssued__c.field-meta.xml
<CustomField>
    <fullName>ContractIssued__c</fullName>
    <formula>Line_Item__r.ContractIssued__c</formula>
    <label>ContractIssued</label>
    <type>Checkbox</type>
</CustomField>