force-app/main/default/objects/Line_Item_Fee__c/fields/Cost_Before_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Cost_Before_Allocation__c</fullName>
    <description>the cost entered for a fee type which allocates percentages to other fee types (example: margin allocated to consultants).  This is a system field to retain the original cost entered</description>
    <inlineHelpText>the cost entered for a fee type which allocates percentages to other fee types (example: margin allocated to consultants).  This is a system field to retain the original cost entered</inlineHelpText>
    <label>Cost Before Allocation</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>