force-app/main/default/objects/Line_Item_Fee__c/fields/Cost_Category_Direct__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category_Direct__c</fullName>
    <description>this field is populated with process builder from the related fee type cost category.  this direct field is needed for roll up summaries.</description>
    <label>Cost Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>