force-app/main/default/objects/Line_Item_Fee__c/fields/Cost_Group_Direct__c.field-meta.xml
<CustomField>
    <fullName>Cost_Group_Direct__c</fullName>
    <label>Cost Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>