force-app/main/default/objects/Line_Item_Fee__c/fields/Curve_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Curve_Name_Text__c</fullName>
    <label>Curve Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>