force-app/main/default/objects/Line_Item_Fee__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee</label>
    <referenceTo>Deal_Fee__c</referenceTo>
    <relationshipLabel>Line Item Fees</relationshipLabel>
    <relationshipName>Line_Item_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>