force-app/main/default/objects/Line_Item_Fee__c/fields/Fee_Contract_Volume__c.field-meta.xml
<CustomField>
    <fullName>Fee_Contract_Volume__c</fullName>
    <formula>CASE(TEXT(Fee__r.Fee_Volume_Type__c), 
  &#39;Surrendered Storage&#39;, Line_Item__r.Surrendered_Storage_Volume__c, 
  Line_Item__r.Volume__c)</formula>
    <label>Fee Contract Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>