force-app/main/default/objects/Line_Item_Fee__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <formula>Fee__r.Fee_Type__r.Name</formula>
    <label>Fee Type</label>
    <type>Text</type>
</CustomField>