force-app/main/default/objects/Line_Item_Fee__c/fields/Fee_Volume_Type_Direct__c.field-meta.xml
<CustomField>
    <fullName>Fee_Volume_Type_Direct__c</fullName>
    <description>copied to line item fee from the fee.  used for rollup summary purposes on line item</description>
    <inlineHelpText>copied to line item fee from the fee.  used for rollup summary purposes on line item</inlineHelpText>
    <label>Fee Volume Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>