force-app/main/default/objects/Line_Item_Fee__c/fields/Ignore_Changes__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mule flag</description>
    <label>Ignore Changes</label>
    <type>Checkbox</type>
</CustomField>