force-app/main/default/objects/Line_Item_Fee__c/fields/Include_in_Cost_Rollup_Direct__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Cost_Rollup_Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Cost Rollup</label>
    <type>Checkbox</type>
</CustomField>