force-app/main/default/objects/Line_Item_Fee__c/fields/Interface_Cost__c.field-meta.xml
<CustomField>
    <fullName>Interface_Cost__c</fullName>
    <label>Interface Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>