force-app/main/default/objects/Line_Item_Fee__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <label>Line Item</label>
    <referenceTo>Line_Item__c</referenceTo>
    <relationshipLabel>Line Item Fees</relationshipLabel>
    <relationshipName>Line_Item_Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>