force-app/main/default/objects/Line_Item_Fee__c/fields/Line_Item_Month__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Month__c</fullName>
    <formula>Line_Item__r.Contract_Month__c</formula>
    <label>Line Item Month</label>
    <type>Date</type>
</CustomField>