force-app/main/default/objects/Line_Item_Fee__c/fields/LineItemActive__c.field-meta.xml
<CustomField>
    <fullName>LineItemActive__c</fullName>
    <formula>Line_Item__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LineItemActive</label>
    <type>Checkbox</type>
</CustomField>