force-app/main/default/objects/Line_Item_Fee__c/recordTypes/Audit_Snapshot.recordType-meta.xml
<RecordType>
    <fullName>Audit_Snapshot</fullName>
    <active>true</active>
    <label>Audit Snapshot</label>
</RecordType>