force-app/main/default/objects/Line_Item_Fee__c/recordTypes/Deal_Line_Fee.recordType-meta.xml
<RecordType>
    <fullName>Deal_Line_Fee</fullName>
    <active>true</active>
    <description>deal level line item fees</description>
    <label>Deal Line Fee</label>
</RecordType>